# Tokenizer-from_scratch

./: README.md  main.py  pyproject.toml
BPE/: data.py  tok.py
TikToken/: data.py  tok.py
assets/: Tokenizer-from-scratch.ipynb  Tokenizer_from_scratch.ipynb
